text-redaction/src/snapshots/text_redaction__redaction__test_redaction__bt_value.snap
---
source: text-redaction/src/redaction.rs
expression: "Redaction::new().add_value(\"foo\").unwrap().add_values(vec![\"bar\",\n                \"baz\"]).unwrap().redact_str(TEXT)"
---
"[TEXT_REDACTED],[TEXT_REDACTED],[TEXT_REDACTED],extra"
