text-redaction/src/snapshots/text_redaction__redaction__test_redaction__by_pattern.snap
---
source: text-redaction/src/redaction.rs
expression: "Redaction::new().add_pattern(pattern).add_patterns(patterns).redact_str(TEXT)"
---
"[TEXT_REDACTED],[TEXT_REDACTED],[TEXT_REDACTED],extra"
