text-redaction/src/snapshots/text_redaction__redaction__test_redaction__can_redact_reader.snap
---
source: text-redaction/src/redaction.rs
expression: "redaction.redact_reader(File::open(file_path).unwrap())"
---
Ok(
    "foo,[TEXT_REDACTED],baz,extra",
)
