text-redaction/src/snapshots/text_redaction__redaction__test_redaction__can_redact_reader_with_info.snap
---
source: text-redaction/src/redaction.rs
expression: "redaction.redact_reader_with_info(File::open(file_path).unwrap())"
---
Ok(
    Info {
        string: "foo,[TEXT_REDACTED],baz",
        captures: [
            Captures {
                text: "bar",
                position: Some(
                    Position {
                        line_number: 1,
                        start_offset: 4,
                        end_offset: 7,
                    },
                ),
            },
        ],
    },
)
