text-redaction/src/snapshots/text_redaction__redaction__test_redaction__can_redact_str.snap
---
source: text-redaction/src/redaction.rs
expression: redaction.redact_str(TEXT)
---
"foo,[TEXT_REDACTED],baz,extra"
