text-redaction/src/snapshots/text_redaction__redaction__test_redaction__can_redact_str_with_info.snap
---
source: text-redaction/src/redaction.rs
expression: redaction.redact_str_with_info(TEXT)
---
Info {
    string: "foo,[TEXT_REDACTED],baz",
    captures: [
        Captures {
            position: Position {
                line_number: 1,
                start_offset: 4,
                end_offset: 7,
            },
        },
    ],
}
