text-redaction/src/snapshots/text_redaction__redaction__test_redaction__can_redact_with_multiple_patterns.snap
---
source: text-redaction/src/redaction.rs
expression: redaction.redact_str(TEXT)
---
"foo,[TEXT_REDACTED],[TEXT_REDACTED],extra"
