text-redaction/src/snapshots/text_redaction__redaction__test_redaction__can_redact_with_placeholder_text.snap
---
source: text-redaction/src/redaction.rs
expression: redaction.redact_str(TEXT)
---
"foo,[HIDDEN_TEXT],baz"
